Remove deprecated dev menu alias

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HandMadeApp">
 
+        <!-- Dev menu -->
         <activity
             android:name="com.handmadeapp.editor.dev.DevMenuActivity"
-            android:exported="false" />
-
-        <!-- Backward-compat alias for old FQCN (fix targetActivity) -->
-        <activity-alias
-            android:name="com.appforcross.editor.dev.DevMenuActivity"
-            android:targetActivity="com.handmadeapp.editor.dev.DevMenuActivity"
             android:exported="false" />
 
         <!-- Import/Preview Activity (Launcher) -->
